--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,15 +1,51 @@
 {
-  "hello": "Hello",
-  "dashboard": "Dashboard",
-  "students": "Students",
-  "create": "Create",
-  "edit": "Edit",
-  "delete": "Delete",
-  "save": "Save",
-  "update": "Update",
-  "name": "Name",
-  "nim": "NIM",
-  "email": "Email",
-  "photo": "Photo",
-  "actions": "Actions"
+  "app": {
+    "title": "Admin"
+  },
+  "nav": {
+    "home": "Home",
+    "mahasiswa": "Students",
+    "users": "Users",
+    "roles": "Roles",
+    "payments": "Payments",
+    "logout": "Logout"
+  },
+  "btn": {
+    "create": "Create",
+    "edit": "Edit",
+    "delete": "Delete",
+    "back": "Back",
+    "filter": "Filter",
+    "login": "Login"
+  },
+  "export": {
+    "csv": "Export CSV",
+    "excel": "Export Excel",
+    "pdf": "Export PDF"
+  },
+  "filter": {
+    "statusAll": "Status (all)",
+    "typeAll": "Type (all)",
+    "sortBy": "Sort by",
+    "asc": "ASC",
+    "desc": "DESC"
+  },
+  "table": {
+    "actions": "Actions",
+    "updatedAt": "Updated",
+    "createdAt": "Created",
+    "status": "Status",
+    "type": "Type",
+    "amount": "Amount",
+    "orderId": "Order ID",
+    "name": "Name",
+    "email": "Email",
+    "nim": "NIM",
+    "summary": "Summary",
+    "rawRequest": "Raw Request",
+    "rawResponse": "Raw Response / Last Status"
+  },
+  "auth": {
+    "loginTitle": "Admin Login"
+  }
 }
